--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "efm32gg11b820"
 description = "Peripheral access API for EFM32GG11B820 microcontrollers"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["Alex Crawford <efm32gg11b820@accounts.acrawford.com>"]
 keywords = ["no-std", "arm", "cortex-m", "efm"]
 license = "Apache-2.0"
@@ -14,4 +14,4 @@ cortex-m-rt = { version = "^0.5.1", optional = true }
 vcell = { version = "^0.1.0" }
 
 [features]
-rt = ["cortex-m-rt"]
+rt = ["cortex-m-rt/device"]
